# Triangle_Counting

./: .gitignore  README.md
code/: CMakeLists.txt  README.md  build_cilk.sh  requirements.jl  run_cilk.sh
code/Cilk/: CMakeLists.txt
code/Cilk/include/: triangle_counting_cilk_implementation.h
code/Cilk/src/: triangle_counting_cilk.c  triangle_counting_cilk_implementation.c
code/data/: README.md  datasets.txt  test.mtx  test.py
code/data/validation/: triangles.txt
code/include/: benchmarks.h  openmp_implementation.h  pthreads_implementation.h  sequential_masked_implementation.h  utils.h
code/src/: benchmarks.c  mmio.c  openmp_implementation.c  pthreads_implementation.c  sequential_masked_implementation.c  triangle_counting.c  utils.c
code/tests/: CMakeLists.txt  README.md
code/tests/data/: test1.mtx
code/tests/src/: seq_implementation_test.cpp  utils_test.cpp
code/useful_scripts/: MatrixMarket.jl  download_data.sh  test.jl
julia_implementation/: MatrixMarket.jl  julia_test.sh  test.jl.save  triangle_counting.jl
pics/: README.md
report/: README.md
